style(*): improvements, add loader

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,7 @@
 $primary-background-color: #fff;
 $button-text-color: #fff;
 $input-color: #0c9;
+$button-hover-color: #00a37a;
 $title-color: #000;
 $primary-text-color: #525b66;
 $border-color: #d3e0e9;
