--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,3 +5,11 @@ $button-hover-color: #00a37a;
 $title-color: #000;
 $primary-text-color: #525b66;
 $border-color: #d3e0e9;
+
+$breakpoints: (
+  small: 0,
+  medium: 640px,
+  large: 1024px,
+  xlarge: 1200px,
+  xxlarge: 1440px,
+);
